--- a/style.css
+++ b/style.css
@@ -131,6 +131,15 @@ h2 {
     padding: 20px;
 }
 
+.workBody:hover,
+.studyBody:hover,
+.exerciseBody:hover,
+.playBody:hover,
+.selfCareBody:hover,
+.socialBody:hover {
+    background-color: hsl(235, 45%, 61%);
+}
+
 .personalBody {
     background-color: hsl(235, 46%, 20%);
     border-radius: 10px;
